--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     </style>
 </head>
 <body>
+    <h1></h1>
+    <script src="main.js"></script>
     <script>
-        console.log("안녕하세요!")
-        window.prompt("안녕하세요!!")
+        console.log("안녕하세요!");
+        window.prompt("안녕하세요!!");
     </script>
 </body>
 </html>
